@@ -1,6 +1,11 @@
 2008-01-21  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
+	When playback finishes, reset the UI (#413005, thanks Bill O'Shea)
+	
+2008-01-21  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-play.c:
 	Small re-organisation.
 
 2008-01-21  Ross Burton  <ross@burtonini.com>
